# vision-rt

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  UPDATING.md  pixi.toml
.claude/commands/: build.md  engine.md  gpu.md  run-xfeat.md
.claude/skills/cuda-kernel-craft/: SKILL.md
.claude/skills/jetson-benchmarking/: SKILL.md
.claude/skills/model-tensor-semantics/: SKILL.md
.claude/skills/rust-cuda-patterns/: SKILL.md
.claude/skills/trt-engine-rebuild/: SKILL.md
.claude/skills/vrt-add-model-crate/: SKILL.md
.claude/skills/vrt-live-stream/: SKILL.md
.claude/skills/vrt-pipeline-compose/: SKILL.md
.claude/skills/vrt-tracking/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
crates/trt-sys/: Cargo.toml  README.md  build.rs  trt_version.rs
crates/trt-sys/include/: builder_shim.h  logger_shim.h  trt_bridge.h
crates/trt-sys/src/: builder_shim.cpp  lib.rs  logger_shim.cpp  pregenerated_bindings.rs  trt_bridge.cpp
crates/vrt/: Cargo.toml  README.md
crates/vrt-depth-anything/: Cargo.toml  README.md
crates/vrt-depth-anything/examples/: depth.rs  detect_depth.rs
crates/vrt-depth-anything/examples/common/: mod.rs
crates/vrt-depth-anything/scripts/: build_engine.sh  export_da2.py
crates/vrt-depth-anything/src/: lib.rs
crates/vrt-hub/: Cargo.toml  README.md
crates/vrt-hub/src/: lib.rs
crates/vrt-osnet/: Cargo.toml  README.md
crates/vrt-osnet/src/: lib.rs
crates/vrt-rfdetr/: Cargo.toml  README.md
crates/vrt-rfdetr-kpts/: Cargo.toml  README.md
crates/vrt-rfdetr-kpts/examples/: rfdetr_kpts_bench.rs  rfdetr_kpts_detect.rs
crates/vrt-rfdetr-kpts/src/: lib.rs
crates/vrt-rfdetr-seg/: Cargo.toml  README.md
crates/vrt-rfdetr-seg/examples/: rfdetr_seg_detect.rs
crates/vrt-rfdetr-seg/scripts/: build_engine.sh  export_rfdetr_seg.py
crates/vrt-rfdetr-seg/src/: lib.rs
crates/vrt-rfdetr/examples/: rfdetr_detect.rs
crates/vrt-rfdetr/src/: lib.rs
crates/vrt-track/: Cargo.toml  README.md
crates/vrt-track/examples/: track_synthetic.rs
crates/vrt-track/src/: association.rs  botsort.rs  camera.rs  gmc.rs  kalman.rs  lib.rs  track.rs  tracker.rs
crates/vrt-types/: Cargo.toml  README.md
crates/vrt-types/src/: camera.rs  lib.rs  undistort.rs
crates/vrt-viz/: Cargo.toml
crates/vrt-viz/src/: client.html  draw.rs  encode.rs  h264.rs  lib.rs  render.rs  serve.rs  stream.rs  trail.rs
crates/vrt-xfeat/: Cargo.toml  README.md
crates/vrt-xfeat/examples/: xfeat_bench.rs  xfeat_detect.rs  xfeat_match.rs
crates/vrt-xfeat/scripts/: export_xfeat_backbone.py
crates/vrt-xfeat/src/: lib.rs  matching.rs  model.rs  postprocess.rs
crates/vrt/src/: buffer.rs  builder.rs  camera.rs  cuda.rs  depth.rs  dtype.rs  engine.rs  error.rs  lib.rs  logger.rs  model.rs  runtime.rs  session.rs  stamp.rs
examples/rtsp_depth/: Cargo.toml
examples/rtsp_depth/src/: main.rs
examples/rtsp_rfdetr/: Cargo.toml
examples/rtsp_rfdetr/src/: main.rs
examples/rtsp_rfdetr_seg/: Cargo.toml
examples/rtsp_rfdetr_seg/src/: main.rs
examples/rtsp_track/: Cargo.toml
examples/rtsp_track/src/: main.rs
examples/xfeat_bench/: Cargo.toml
examples/xfeat_match/: Cargo.toml
examples/xfeat_match/src/: main.rs
recipes/tensorrt-dev/: recipe.yaml
scripts/: export_xfeat_backbone.py  trtexec.sh
