[workspace]
resolver = "2"
members = [
    "crates/trt-sys",
    "crates/vrt",
    "crates/vrt-hub",
    "crates/vrt-xfeat",
    "crates/vrt-rfdetr",
    "crates/vrt-rfdetr-kpts",
    "crates/vrt-rfdetr-seg",
    "crates/vrt-track",
    "crates/vrt-types",
    "crates/vrt-depth-anything",
    "crates/vrt-viz",
]
# The RTSP→RF-DETR example depends on the private `sensor-rtsp` (kornia/sensor-rt)
# + GStreamer. Excluded from the workspace so hosted CI never clones a private repo
# to resolve, and GStreamer stays out of the pure-algorithm crates. Build it
# directly: `cargo run --manifest-path examples/rtsp_rfdetr/Cargo.toml`.
exclude = ["examples/rtsp_rfdetr", "examples/rtsp_rfdetr_seg", "examples/rtsp_depth", "examples/rtsp_track"]

[workspace.dependencies]
# One cudarc across the workspace, matching kornia-rs's cudarc feature set so cargo
# unifies to a single build (shared CudaStream/CudaSlice types for zero-copy interop).
cudarc = { version = "0.19", default-features = false, features = [
  "cuda-version-from-build-system",
  "driver",
  "nvrtc",
  "std",
  "fallback-dynamic-loading",
  "fallback-latest",
] }
# kornia GPU image/tensor types — `cudarc` feature enables the device backend +
# custom kernels. Git-pinned to a fixed cuda-preprocess rev (reproducible build).
kornia-image   = { git = "https://github.com/kornia/kornia-rs", tag = "v0.1.15-rc.4", features = ["cudarc"] }
kornia-tensor  = { git = "https://github.com/kornia/kornia-rs", tag = "v0.1.15-rc.4", features = ["cudarc"] }
kornia-imgproc = { git = "https://github.com/kornia/kornia-rs", tag = "v0.1.15-rc.4", features = ["cudarc"] }
kornia-io      = { git = "https://github.com/kornia/kornia-rs", tag = "v0.1.15-rc.4" }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/kornia/vision-rt"
authors = ["Edgar Riba <edgar.riba@gmail.com>", "Kornia AI <contact@kornia.org>"]
