[package]
name = "trt-sys"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Raw FFI bindings to TensorRT 10.x — bindgen over a hand-written C bridge"
readme = "README.md"
links = "nvinfer"

[lib]
name = "trt_sys"

[lints.rust]
unsafe_code = "allow"

[build-dependencies]
cc = "1"
bindgen = "0.70"

[dependencies]

[features]
# In-process ONNX -> engine builder (links libnvonnxparser)
builder = []
