[package]
name = "vrt-depth-anything"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Depth Anything V2 metric monocular depth for vision-rt — dense metric depth on TensorRT + GPU depth-at-box/mask fusion"
readme = "README.md"

[lib]
name = "vrt_depth_anything"

[features]
default = []
# Auto-pull the pinned ONNX from Hugging Face (kornia/depth-anything) via vrt-hub.
hub = ["dep:vrt-hub", "vrt-hub/hub"]
# Build the engine in-process via nvonnxparser instead of the trtexec subprocess.
builder = ["dep:vrt-hub", "vrt-hub/builder"]

[dependencies]
kornia-image  = { workspace = true }
kornia-tensor = { workspace = true }
cudarc      = { workspace = true }
vrt = { path = "../vrt" }
vrt-types = { path = "../vrt-types" }
vrt-hub = { path = "../vrt-hub", optional = true }
kornia-imgproc = { workspace = true }
thiserror   = "2.0"

[dev-dependencies]
vrt-hub        = { path = "../vrt-hub", features = ["builder"] }
vrt-rfdetr-seg = { path = "../vrt-rfdetr-seg" }
kornia-io      = { workspace = true }
env_logger     = "0.11"
