[package]
name = "vrt-rfdetr-kpts"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "RF-DETR Keypoint (human pose) for vision-rt — NMS-free box + 17 COCO keypoints on TensorRT"
readme = "README.md"

[lib]
name = "vrt_rfdetr_kpts"

[features]
default = []
# Auto-pull the pinned ONNX from Hugging Face (kornia/rfdetr-kpts) via vrt-hub.
hub = ["dep:vrt-hub", "vrt-hub/hub"]
# Build the engine in-process via nvonnxparser instead of the trtexec subprocess.
builder = ["dep:vrt-hub", "vrt-hub/builder"]

[dependencies]
kornia-image  = { workspace = true }
kornia-tensor = { workspace = true }
cudarc      = { workspace = true }
vrt = { path = "../vrt" }
vrt-hub = { path = "../vrt-hub", optional = true }
kornia-imgproc = { workspace = true }
thiserror   = "2.0"

[dev-dependencies]
vrt-hub    = { path = "../vrt-hub", features = ["builder"] }
kornia-io  = { workspace = true }
env_logger = "0.11"
