[package]
name = "vrt-xfeat"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "XFeat post-processing: NMS, TopK keypoint selection, descriptor sampling"
readme = "README.md"

[lib]
name = "vrt_xfeat"

[features]
default = []
# Auto-pull the pinned XFeat weights from Hugging Face (via vrt-hub). Engine is
# built on first run through the trtexec subprocess unless `builder` is also on.
hub = ["dep:vrt-hub", "vrt-hub/hub"]
# Build the engine in-process via nvonnxparser instead of the trtexec subprocess.
builder = ["dep:vrt-hub", "vrt-hub/builder"]

[dependencies]
kornia-image  = { workspace = true }
kornia-tensor = { workspace = true }
cudarc      = { workspace = true }
vrt = { path = "../vrt" }
vrt-hub = { path = "../vrt-hub", optional = true }
kornia-imgproc = { workspace = true }
thiserror   = "2.0"
